src/main/mp/parser/New folder/MPParser.py
# Generated from main/mp/parser/MP.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'+'", "'-'", "'*'", "'/'", "'='", "'<>'", "'<'", "'>'", 
                     "'<='", "'>='", "':='", "'['", "']'", "':'", "'('", 
                     "')'", "';'", "'..'", "','" ]

    symbolicNames = [ "<INVALID>", "COMMENT1", "COMMENT2", "COMMENT3", "BREAK", 
                      "CONTINUE", "FOR", "WHILE", "TO", "DOWNTO", "WITH", 
                      "DO", "IF", "THEN", "ELSE", "VAR", "OF", "BEGIN", 
                      "END", "RETURN", "FUNCTION", "PROCEDURE", "ARRAY", 
                      "REAL", "BOOLEAN", "INTEGER", "STRING", "NOT", "AND", 
                      "OR", "DIV", "MOD", "ADD", "SUB", "MUL", "DIV_F", 
                      "EQ", "NEQ", "LESSTHAN", "GREATERTHAN", "LESSEQ", 
                      "GREATEREQ", "ASSIGN", "LSB", "RSB", "CL", "LB", "RB", 
                      "SM", "DDOT", "CM", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "STRINGLIT", "INTLIT", "REALLIT", "BOOLEANLIT", "TRUE", 
                      "FALSE", "ID", "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_var_decl = 2
    RULE_list_decls = 3
    RULE_decl = 4
    RULE_list_ID = 5
    RULE_func_decl = 6
    RULE_param_list = 7
    RULE_param_list1 = 8
    RULE_param = 9
    RULE_procedure_decl = 10
    RULE_mptype = 11
    RULE_primitive_type = 12
    RULE_compound_type = 13
    RULE_arraylit = 14
    RULE_expr = 15
    RULE_expr1 = 16
    RULE_expr2 = 17
    RULE_expr3 = 18
    RULE_expr4 = 19
    RULE_expr5 = 20
    RULE_expr6 = 21
    RULE_operand = 22
    RULE_array_elmt = 23
    RULE_func_call = 24
    RULE_list_expr = 25
    RULE_list_expr1 = 26
    RULE_statement = 27
    RULE_assignment_stmt = 28
    RULE_if_stmt = 29
    RULE_while_stmt = 30
    RULE_for_stmt = 31
    RULE_break_stmt = 32
    RULE_continue_stmt = 33
    RULE_return_stmt = 34
    RULE_compound_stmt = 35
    RULE_list_stmt = 36
    RULE_list_stmt1 = 37
    RULE_call_stmt = 38
    RULE_with_stmt = 39

    ruleNames =  [ "program", "declaration", "var_decl", "list_decls", "decl", 
                   "list_ID", "func_decl", "param_list", "param_list1", 
                   "param", "procedure_decl", "mptype", "primitive_type", 
                   "compound_type", "arraylit", "expr", "expr1", "expr2", 
                   "expr3", "expr4", "expr5", "expr6", "operand", "array_elmt", 
                   "func_call", "list_expr", "list_expr1", "statement", 
                   "assignment_stmt", "if_stmt", "while_stmt", "for_stmt", 
                   "break_stmt", "continue_stmt", "return_stmt", "compound_stmt", 
                   "list_stmt", "list_stmt1", "call_stmt", "with_stmt" ]

    EOF = Token.EOF
    COMMENT1=1
    COMMENT2=2
    COMMENT3=3
    BREAK=4
    CONTINUE=5
    FOR=6
    WHILE=7
    TO=8
    DOWNTO=9
    WITH=10
    DO=11
    IF=12
    THEN=13
    ELSE=14
    VAR=15
    OF=16
    BEGIN=17
    END=18
    RETURN=19
    FUNCTION=20
    PROCEDURE=21
    ARRAY=22
    REAL=23
    BOOLEAN=24
    INTEGER=25
    STRING=26
    NOT=27
    AND=28
    OR=29
    DIV=30
    MOD=31
    ADD=32
    SUB=33
    MUL=34
    DIV_F=35
    EQ=36
    NEQ=37
    LESSTHAN=38
    GREATERTHAN=39
    LESSEQ=40
    GREATEREQ=41
    ASSIGN=42
    LSB=43
    RSB=44
    CL=45
    LB=46
    RB=47
    SM=48
    DDOT=49
    CM=50
    UNCLOSE_STRING=51
    ILLEGAL_ESCAPE=52
    STRINGLIT=53
    INTLIT=54
    REALLIT=55
    BOOLEANLIT=56
    TRUE=57
    FALSE=58
    ID=59
    WS=60
    ERROR_CHAR=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MPParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(MPParser.DeclarationContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 80
                self.declaration()
                self.state = 83 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.VAR) | (1 << MPParser.FUNCTION) | (1 << MPParser.PROCEDURE))) != 0)):
                    break

            self.state = 85
            self.match(MPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(MPParser.Var_declContext,0)


        def func_decl(self):
            return self.getTypedRuleContext(MPParser.Func_declContext,0)


        def procedure_decl(self):
            return self.getTypedRuleContext(MPParser.Procedure_declContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = MPParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.var_decl()
                pass
            elif token in [MPParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.func_decl()
                pass
            elif token in [MPParser.PROCEDURE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 89
                self.procedure_decl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MPParser.VAR, 0)

        def list_decls(self):
            return self.getTypedRuleContext(MPParser.List_declsContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_var_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl" ):
                return visitor.visitVar_decl(self)
            else:
                return visitor.visitChildren(self)




    def var_decl(self):

        localctx = MPParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(MPParser.VAR)
            self.state = 93
            self.list_decls()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class List_declsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.DeclContext)
            else:
                return self.getTypedRuleContext(MPParser.DeclContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_list_decls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_decls" ):
                return visitor.visitList_decls(self)
            else:
                return visitor.visitChildren(self)




    def list_decls(self):

        localctx = MPParser.List_declsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_list_decls)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 95
                self.decl()
                self.state = 98 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MPParser.ID):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_ID(self):
            return self.getTypedRuleContext(MPParser.List_IDContext,0)


        def CL(self):
            return self.getToken(MPParser.CL, 0)

        def mptype(self):
            return self.getTypedRuleContext(MPParser.MptypeContext,0)


        def SM(self):
            return self.getToken(MPParser.SM, 0)

        def getRuleIndex(self):
            return MPParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MPParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.list_ID()
            self.state = 101
            self.match(MPParser.CL)
            self.state = 102
            self.mptype()
            self.state = 103
            self.match(MPParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class List_IDContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.ID)
            else:
                return self.getToken(MPParser.ID, i)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.CM)
            else:
                return self.getToken(MPParser.CM, i)

        def getRuleIndex(self):
            return MPParser.RULE_list_ID

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_ID" ):
                return visitor.visitList_ID(self)
            else:
                return visitor.visitChildren(self)




    def list_ID(self):

        localctx = MPParser.List_IDContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_list_ID)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(MPParser.ID)
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.CM:
                self.state = 106
                self.match(MPParser.CM)
                self.state = 107
                self.match(MPParser.ID)
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Func_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(MPParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def param_list(self):
            return self.getTypedRuleContext(MPParser.Param_listContext,0)


        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def CL(self):
            return self.getToken(MPParser.CL, 0)

        def mptype(self):
            return self.getTypedRuleContext(MPParser.MptypeContext,0)


        def SM(self):
            return self.getToken(MPParser.SM, 0)

        def compound_stmt(self):
            return self.getTypedRuleContext(MPParser.Compound_stmtContext,0)


        def var_decl(self):
            return self.getTypedRuleContext(MPParser.Var_declContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_func_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_decl" ):
                return visitor.visitFunc_decl(self)
            else:
                return visitor.visitChildren(self)




    def func_decl(self):

        localctx = MPParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_func_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(MPParser.FUNCTION)
            self.state = 114
            self.match(MPParser.ID)
            self.state = 115
            self.match(MPParser.LB)
            self.state = 116
            self.param_list()
            self.state = 117
            self.match(MPParser.RB)
            self.state = 118
            self.match(MPParser.CL)
            self.state = 119
            self.mptype()
            self.state = 120
            self.match(MPParser.SM)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 121
                self.var_decl()


            self.state = 124
            self.compound_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Param_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(MPParser.ParamContext,0)


        def param_list1(self):
            return self.getTypedRuleContext(MPParser.Param_list1Context,0)


        def getRuleIndex(self):
            return MPParser.RULE_param_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_list" ):
                return visitor.visitParam_list(self)
            else:
                return visitor.visitChildren(self)




    def param_list(self):

        localctx = MPParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_param_list)
        try:
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.param()
                self.state = 127
                self.param_list1()
                pass
            elif token in [MPParser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Param_list1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SM(self):
            return self.getToken(MPParser.SM, 0)

        def param(self):
            return self.getTypedRuleContext(MPParser.ParamContext,0)


        def param_list1(self):
            return self.getTypedRuleContext(MPParser.Param_list1Context,0)


        def getRuleIndex(self):
            return MPParser.RULE_param_list1

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_list1" ):
                return visitor.visitParam_list1(self)
            else:
                return visitor.visitChildren(self)




    def param_list1(self):

        localctx = MPParser.Param_list1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_param_list1)
        try:
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.SM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.match(MPParser.SM)
                self.state = 133
                self.param()
                self.state = 134
                self.param_list1()
                pass
            elif token in [MPParser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_ID(self):
            return self.getTypedRuleContext(MPParser.List_IDContext,0)


        def CL(self):
            return self.getToken(MPParser.CL, 0)

        def mptype(self):
            return self.getTypedRuleContext(MPParser.MptypeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = MPParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.list_ID()
            self.state = 140
            self.match(MPParser.CL)
            self.state = 141
            self.mptype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Procedure_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE(self):
            return self.getToken(MPParser.PROCEDURE, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def param_list(self):
            return self.getTypedRuleContext(MPParser.Param_listContext,0)


        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def SM(self):
            return self.getToken(MPParser.SM, 0)

        def compound_stmt(self):
            return self.getTypedRuleContext(MPParser.Compound_stmtContext,0)


        def var_decl(self):
            return self.getTypedRuleContext(MPParser.Var_declContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_procedure_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedure_decl" ):
                return visitor.visitProcedure_decl(self)
            else:
                return visitor.visitChildren(self)




    def procedure_decl(self):

        localctx = MPParser.Procedure_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_procedure_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(MPParser.PROCEDURE)
            self.state = 144
            self.match(MPParser.ID)
            self.state = 145
            self.match(MPParser.LB)
            self.state = 146
            self.param_list()
            self.state = 147
            self.match(MPParser.RB)
            self.state = 148
            self.match(MPParser.SM)
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 149
                self.var_decl()


            self.state = 152
            self.compound_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MptypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(MPParser.Primitive_typeContext,0)


        def compound_type(self):
            return self.getTypedRuleContext(MPParser.Compound_typeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_mptype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMptype" ):
                return visitor.visitMptype(self)
            else:
                return visitor.visitChildren(self)




    def mptype(self):

        localctx = MPParser.MptypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_mptype)
        try:
            self.state = 156
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.REAL, MPParser.BOOLEAN, MPParser.INTEGER, MPParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.primitive_type()
                pass
            elif token in [MPParser.ARRAY]:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.compound_type()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Primitive_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MPParser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MPParser.INTEGER, 0)

        def REAL(self):
            return self.getToken(MPParser.REAL, 0)

        def STRING(self):
            return self.getToken(MPParser.STRING, 0)

        def getRuleIndex(self):
            return MPParser.RULE_primitive_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitive_type" ):
                return visitor.visitPrimitive_type(self)
            else:
                return visitor.visitChildren(self)




    def primitive_type(self):

        localctx = MPParser.Primitive_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_primitive_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.REAL) | (1 << MPParser.BOOLEAN) | (1 << MPParser.INTEGER) | (1 << MPParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Compound_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arraylit(self):
            return self.getTypedRuleContext(MPParser.ArraylitContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_compound_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompound_type" ):
                return visitor.visitCompound_type(self)
            else:
                return visitor.visitChildren(self)




    def compound_type(self):

        localctx = MPParser.Compound_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_compound_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.arraylit()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArraylitContext(ParserRuleContext):
